# company-brain

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260228_0001_initial_schema.py  20260228_0002_rls_policies.py  20260303_0001_hr_integration.py  20260304_0001_new_features.py  20260304_0002_multi_llm_harvest.py  20260304_0003_rename_departure_to_suspension.py  20260305_0001_system_settings.py  20260305_0002_admin_enhancements.py
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  admin.py  analytics.py  auth.py  chat.py  departments.py  documents.py  (+7 more)
apps/api/app/connectors/: __init__.py  chunker.py  google_drive.py  notion.py  telegram.py
apps/api/app/core/: api_keys.py  auth.py  config.py  database.py  encryption.py  prompts.py  seed.py
apps/api/app/models/: database.py  schemas.py
apps/api/app/scripts/: __init__.py  promote_admin.py  seed.py
apps/api/app/services/: __init__.py  chat_service.py  document_classifier.py  knowledge_promoter.py  recipe_extractor.py  types.py
apps/api/app/workers/: __init__.py  ingestion_worker.py  roi_report_worker.py  usage_rollup_worker.py
apps/api/tests/: test_admin.py  test_analytics_phase3.py  test_api_keys.py  test_chat_enhancements.py  test_chunker.py  test_data_classifier.py  test_documents.py  test_harvest_system.py  test_health.py  test_hr_integration.py  test_model_router.py  test_multi_llm_provider.py  test_pipeline.py  test_recipes.py  test_routes.py  test_safety_guard.py  test_templates.py  test_users.py
apps/bot/: Dockerfile  README.md  pyproject.toml  ruff.toml
apps/bot/app/: __main__.py  api_client.py  config.py  i18n.py  models.py
apps/bot/app/formatters/: response.py
apps/bot/app/handlers/: __init__.py  callback.py  command.py  harvest.py  message.py  onboarding.py
apps/bot/tests/: test_formatters.py
(+130 files in other folders)
