[project]
name = "company-brain-api"
version = "0.1.0"
description = "Company Brain AI Knowledge Engine - FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "qdrant-client>=1.12.0",
    "redis[hiredis]>=5.0.0",
    "anthropic>=0.40.0",
    "cohere>=5.0.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langfuse>=2.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "inngest>=0.4.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.8.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
